--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   --black: #264c67;
+  --actionBlue: #1774ff;
 }
 
 body {
@@ -28,12 +29,19 @@ body.mobileBG .bgOverlay {
 
 }
 
+.mainframe {
+  position: relative;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+}
+
 /*container for all content within screen*/
-.container {
+.container-welcome {
   position: relative;
   width: 100%;
   height: 98%;
-  background-image: linear-gradient(rgba(36, 190, 255, 0.5), rgba(36, 190, 255, 0.5));
+  background-color: rgba(36, 190, 255, 0.5);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 90% 100%, 80% 100%, 70% 100%, 60% 100%, 50% 100%, 40% 100%, 30% 100%, 20% 100%, 10% 100%, 0 100%);
   animation: shearOverlay;
   animation-duration: 1.7s;
@@ -73,10 +81,11 @@ body.mobileBG .bgOverlay {
 /*Styling the header/hero text*/
 .heroText {
   position: absolute;
+  display: block;
+  width: 100%;
   top: 25%;
-  left: 50%;
+  text-align: center;
   font-size: 2.0em;
-  transform: translateX(-50%);
   color: #ffffff;
   opacity: 0;
   animation-name: titleAppear;
@@ -119,12 +128,13 @@ body.mobileBG .bgOverlay {
 }
 
 /*Styling the login button*/
-.login-btn {
+.report-btn {
   display: block;
   background-color: #ffffff;
   border: none;
+  font-weight: lighter;
   font-size: 1.5em;
-  padding: 3.5% 12%;
+  padding: 3.5% 7%;
   border-radius: 2.0em;
   position: absolute;
   left: 50%;
@@ -138,7 +148,7 @@ body.mobileBG .bgOverlay {
 }
 
 /*Getting rid of the blue outline when user clicks the login button*/
-.login-btn:focus {
+.report-btn:focus {
   outline: none;
 }
 
@@ -163,6 +173,60 @@ body.mobileBG .bgOverlay {
   outline: none;
 }
 
+
+.container-questions {
+  margin: 7% 5%;
+  position: absolute;
+  top: 5%;
+  transform: translateX(200%);
+  color: #ffffff;
+}
+
+.container-questions .micro-copy {
+  color: #ffffff;
+  font-size: 1.0em;
+  font-weight: 400;
+}
+
+.container-questions .question {
+  position: relative;
+  margin-top: 5%;
+  width: 100%;
+  font-weight: bold;
+  font-size: 2.0em;
+}
+
+.container-questions .question .user-input {
+  position: absolute;
+  top: 11.0em;
+  width: 90%;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #ffffff;
+  color: #ffffff;
+  font-size: 0.75em;
+}
+
+.container-questions .question .user-input::placeholder {
+
+  color: #ffffff;
+}
+
+.container-questions .question .next-btn {
+  display: block;
+  background-color: #ffffff;
+  border: none;
+  font-weight: lighter;
+  font-size: 0.75em;
+  padding: 2% 12%;
+  border-radius: 2.0em;
+  position: absolute;
+  left: 50%;
+  top: 17.0em;
+  transform: translateX(-50%);
+  color: var(--actionBlue);
+  cursor: pointer;
+}
 
 /*
 Stylesheet for general prototype (desktop, basic debugging)
